# equipment-catalog

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/database/: crud.py  sql.py
app/models/: consumables.py  equipments.py  parts.py
app/schemas/: consumables.py  equipments.py  parts.py
sql_app/: crud.py  main.py  models.py  schemas.py
sql_app/models/: consumables.py  equipments.py  parts.py
sql_app/schemas/: equipments.py  parts.py
src/: main.py
src/api/routes/: equipments.py
src/api/schemas/: equipments.py
src/database/: crud.py  sql.py
src/database/migration/: env.py
src/database/models/: abstraction.py  parts.py
src/models/: consumables.py  equipments.py  parts.py
src/schemas/: equipments.py  parts.py
